[package]
name = "jcode-notify-email"
version = "0.1.0"
edition = "2024"

[lib]
name = "jcode_notify_email"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
imap = { version = "3.0.0-alpha.15", default-features = false, features = ["rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
mail-parser = "0.9"
pulldown-cmark = "0.12"
urlencoding = "2"

[lints]
workspace = true
