[package]
name = "jcode-productivity-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
jcode-storage = { path = "../jcode-storage" }

# Dashboard rendering (SVG -> PNG)
resvg = "0.46"
usvg = "0.46"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
