[package]
name = "jcode-protocol"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
jcode-batch-types = { path = "../jcode-batch-types" }
jcode-config-types = { path = "../jcode-config-types" }
jcode-message-types = { path = "../jcode-message-types" }
jcode-plan = { path = "../jcode-plan" }
jcode-provider-core = { path = "../jcode-provider-core" }
jcode-selfdev-types = { path = "../jcode-selfdev-types" }
jcode-session-types = { path = "../jcode-session-types" }
jcode-side-panel-types = { path = "../jcode-side-panel-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
anyhow = "1"
rand = "0.9"

[lints]
workspace = true
