[package]
name = "jcode-provider-anthropic-runtime"
version = "0.1.0"
edition = "2024"
description = "Direct Anthropic Messages API provider runtime (OAuth + API key, SSE streaming) for jcode, kept downstream of jcode-base so provider edits do not rebuild the app spine"

[lib]
name = "jcode_provider_anthropic_runtime"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
jcode-base = { path = "../jcode-base" }
jcode-message-types = { path = "../jcode-message-types" }
jcode-provider-anthropic = { path = "../jcode-provider-anthropic" }
jcode-provider-core = { path = "../jcode-provider-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "charset", "http2", "system-proxy", "rustls-tls", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "rt"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "v5"] }

[dev-dependencies]
# The migrated anthropic tests use jcode-base's test-env sandbox.
jcode-base = { path = "../jcode-base", features = ["test-support"] }
tempfile = "3"
