[package]
name = "jcode-provider-anthropic"
version = "0.1.0"
edition = "2024"

[dependencies]
jcode-logging = { path = "../jcode-logging" }
jcode-message-types = { path = "../jcode-message-types" }
jcode-provider-core = { path = "../jcode-provider-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
