[package]
name = "jcode-provider-antigravity"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
jcode-provider-gemini = { path = "../jcode-provider-gemini" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
