[package]
name = "jcode-provider-bedrock"
version = "0.1.0"
edition = "2024"

[lib]
name = "jcode_provider_bedrock"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
# AWS SDK stack (~20 transitive aws-*/aws-smithy-* crates). Optional so
# compile-speed probes and minimal builds can skip it; enabled by the
# default-on `aws-sdk` feature (forwarded from the root crate's `bedrock`
# feature).
aws-config = { version = "1.8.16", optional = true }
aws-credential-types = { version = "1.2.14", optional = true }
aws-sdk-bedrock = { version = "1.141.0", optional = true }
aws-sdk-bedrockruntime = { version = "1.130.0", optional = true }
aws-sdk-sts = { version = "1.103.0", optional = true }
aws-smithy-types = { version = "1.4.7", optional = true }
aws-types = { version = "1.3.15", optional = true }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
jcode-core = { path = "../jcode-core" }
jcode-logging = { path = "../jcode-logging" }
jcode-message-types = { path = "../jcode-message-types" }
jcode-provider-core = { path = "../jcode-provider-core" }
jcode-provider-env = { path = "../jcode-provider-env" }
jcode-storage = { path = "../jcode-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt", "sync"] }
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"

[features]
default = ["aws-sdk"]
# Live AWS Bedrock support (ConverseStream, catalog refresh, STS validation).
# Without this feature the provider still compiles: model metadata, cached
# catalog handling, and credential detection keep working, but live calls
# return an explanatory error.
aws-sdk = [
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sdk-bedrock",
    "dep:aws-sdk-bedrockruntime",
    "dep:aws-sdk-sts",
    "dep:aws-smithy-types",
    "dep:aws-types",
]

[lints]
workspace = true
