[package]
name = "jcode-provider-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "jcode_provider_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
jcode-logging = { path = "../jcode-logging" }
jcode-message-types = { path = "../jcode-message-types" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "charset", "http2", "system-proxy", "rustls-tls", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["sync"] }

[lints]
workspace = true
