[package]
name = "jcode-provider-doctor"
version = "0.1.0"
edition = "2024"
publish = false

# Provider diagnostics that sit downstream of jcode-base: the strict
# `jcode provider-doctor` end-to-end runner (provider_e2e), the live provider
# probes it drives, and the auth-lifecycle contract driver. Split out of
# jcode-base so edits to the doctor cluster no longer rebuild the
# base -> app-core -> tui spine, and base compiles faster with lower peak
# memory.

[lib]
name = "jcode_provider_doctor"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

# default-features = false: the doctor only needs base's always-on surface
# (auth, provider runtimes, provider_catalog, live_tests). Feature unification
# in the root binary re-enables embeddings/bedrock there.
jcode-base = { path = "../jcode-base", default-features = false }

[dev-dependencies]
# The auth-lifecycle driver tests run inside jcode-base's auth test sandbox.
jcode-base = { path = "../jcode-base", features = ["test-support"] }
jcode-provider-metadata = { path = "../jcode-provider-metadata" }
tokio = { version = "1", features = ["macros", "rt"] }
