[package]
name = "jcode-provider-env"
version = "0.1.0"
edition = "2024"

[lib]
name = "jcode_provider_env"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
jcode-core = { path = "../jcode-core" }
jcode-logging = { path = "../jcode-logging" }
jcode-provider-metadata = { path = "../jcode-provider-metadata" }
jcode-storage = { path = "../jcode-storage" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
