[package]
name = "jcode-provider-openai-runtime"
version = "0.1.0"
edition = "2024"
description = "OpenAI provider runtime (Codex OAuth + API key, Responses API over SSE/WebSocket) for jcode, kept downstream of jcode-base so provider edits do not rebuild the app spine"

[lib]
name = "jcode_provider_openai_runtime"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
# default-features = false: the top-level binary decides heavy optional base
# features (embeddings/bedrock). Runtime crates must not re-enable them via
# feature unification, or --no-default-features release targets (e.g. Windows
# ARM64, which cannot build tract-linalg asm) break.
jcode-base = { path = "../jcode-base", default-features = false }
jcode-message-types = { path = "../jcode-message-types" }
jcode-provider-core = { path = "../jcode-provider-core" }
jcode-provider-openai = { path = "../jcode-provider-openai" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "charset", "http2", "system-proxy", "rustls-tls", "rustls-tls-native-roots"] }
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", features = ["sync", "time", "rt", "net", "io-util"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
dirs = "5"

[dev-dependencies]
# The migrated openai tests use jcode-base's test-env sandbox.
jcode-base = { path = "../jcode-base", features = ["test-support"] }
tempfile = "3"
