[package]
name = "jcode-provider-openrouter"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
bytes = "1"
futures = "0.3"
jcode-core = { path = "../jcode-core" }
jcode-logging = { path = "../jcode-logging" }
jcode-message-types = { path = "../jcode-message-types" }
reqwest = { version = "0.12", default-features = false, features = ["stream"] }

[lints]
workspace = true
