[package]
name = "jcode-session-types"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
jcode-message-types = { path = "../jcode-message-types" }
memchr = "2"
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
