[package]
name = "jcode-storage"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
dirs = "5"
jcode-core = { path = "../jcode-core" }
libc = "0.2"
rand = "0.9.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
